--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "mkdirp": "^1.0.4",
+    "mongodb": "^4.9.0",
+    "mongoose": "^6.5.2",
     "node-fetch": "^3.2.10",
     "nodemon": "^2.0.19"
   }
