--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "tiktok-auto",
   "version": "1.0.0",
   "description": "Tiktok Auto",
-  "main": "app.js",
+  "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
+    "start": "node index.js",
     "dev": "nodemon ."
   },
   "author": "",
