--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^4.9.0",
     "mongoose": "^6.5.2",
     "node-fetch": "^3.2.10",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "socket.io": "^4.5.3"
   }
 }
